# graduate_work

./: .env  .gitignore  TODO.txt  docker-compose.dev.yaml  package-lock.json  package.json  pyproject.toml  todo.puml
cinema_api/: .dev-env  .dockerignore  Dockerfile  main.py  requirements.txt
cinema_api/api/: deps.py  ws_handlers.py  ws_manager.py
cinema_api/api/v1/: cinema_room.py  cinema_room_ws.py
cinema_api/core/: config.py  exceptions.py  log.py  utils.py
cinema_api/core/settings/: app_settings.py  base.py  development_app.py  production_app.py  settings_template.json
cinema_api/core/tasks/: cinema_room_film.py
cinema_api/crud/: auth_crud.py  cinema_crud.py
cinema_api/db/: redis.py
cinema_api/schemas/: base.py  cinema_room.py  validators.py  websocket_command.py  websocket_message.py
cinema_api/service/: base_service.py  cinema_service.py  message_service.py
cinema_api/tests/functional/: conftest.py  settings.py
cinema_api/tests/functional/src/: test_cinema.py
cinema_api/tests/functional/utils/: schemas.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/create_room/: CreateRoom.tsx
frontend/src/components/login/: Login.tsx
frontend/src/components/room/: Loaders.tsx  Room.tsx  wsHandler.tsx
frontend/src/components/room/chat/: ChatMessages.tsx
frontend/src/style/: Default.css
wiremock/mappings/: identify_john_user_request.json  identify_matvey_user_request.json  login_johnd4.json  login_matvey.json  login_request.json
