[tool.poetry]
name = "graduate_work"
version = "0.1.0"
description = ""
authors = ["Skirda Matvei <skirdamatvei@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
uvloop = "^0.16.0"
orjson = "3.6.1"
python-dotenv = "^0.20.0"
aioredis = "^2.0.1"
loguru = "^0.6.0"
gunicorn = "^20.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
flake8-html = "^0.4.2"
black = "^22.6.0"
isort = "^5.10.1"
bandit = "^1.7.4"
mypy = "^0.971"
pytest = "^7.1.2"
pytest-asyncio = "0.12.0"
aiohttp = "^3.8.1"
redis = "^4.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
